[gd_scene load_steps=4 format=3 uid="uid://i8njwppn3gil"]

[ext_resource type="Script" path="res://script/esquilo.gd" id="1_ip27w"]
[ext_resource type="Texture2D" uid="uid://bikm7iggo6tbf" path="res://icon.svg" id="2_mtocg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gor7f"]
radius = 32.0
height = 64.0

[node name="Esquilo" type="CharacterBody2D"]
script = ExtResource("1_ip27w")

[node name="shoot" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.38419e-07, -32)
scale = Vector2(0.522, 0.5)
texture = ExtResource("2_mtocg")

[node name="Colide_Left" type="RayCast2D" parent="."]
position = Vector2(-8, -32)
target_position = Vector2(-64, 0)

[node name="Colide_Right" type="RayCast2D" parent="."]
position = Vector2(0, -32)
target_position = Vector2(64, 0)

[node name="Colis√£o esquilo" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("CapsuleShape2D_gor7f")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 17)

[node name="mira_player" type="RayCast2D" parent="."]
target_position = Vector2(0, 60)

[connection signal="timeout" from="shoot" to="." method="_on_shooting_timeout"]
